ProductsMicroservice/ProductsMicroservice/k8s/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  namespace: ingress
  labels:
    app: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: products
        image: acrproep01.azurecr.io/products:v1.1
        ports:
        - containerPort: 80
