ProductsMicroservice/ProductsMicroservice/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: products-service
 namespace: ingress
spec:
 type: ClusterIP
 selector:
    app: products
 ports:
   - port: 80
